samples/_failures_safe/1761697951_de5ef9_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b645c6d3.c: In function ‘main’:
./samples/SAFE/__tmp_b645c6d3.c:151:5: error: expected expression at end of input
  151 |     if (scanf("%d", &edges) != 1 || edges <
      |     ^~
./samples/SAFE/__tmp_b645c6d3.c:151:5: error: expected declaration or statement at end of input
